ember/app/styles/components/user-subpanels.scss
.component {
  &.form-subpanel {

    height: 95vh;
    padding-top: 90px;

    header {
      margin-bottom: 10px;
      p {
        margin: 15px 25px 0 25px;
      }
      @media screen and (max-height: 750px) {
        p {
          display: none;
        }
        .logo-image {
          width: 28%;
        }
      }
      @media screen and (max-height: 620px) {
        .logo-image {
          width: 20%;
        }
      }
    }

    h2 {
      margin-top: 0;
    }

    text-align: center;
    &.signup-subpanel {
      form {
        padding: 0;
      }
      .overflow-scroll {
        margin: 0 25px;
        height: calc(100% - 125px);
        .scroll-wrapper {
          padding-bottom: 20px;
        }
      }
    }
    .logo-image {
      width: 40%;
      height: auto;
      margin: 0 auto;
      &.sign-up {
        width: 40px;
        margin: 0;
        position: absolute;
        left: 25px;
        top: 20px;
      }
    }

    form {
      padding: 0 25px;

      text-align: left;
    }

    .input-wrapper {
      img {
        @extend ._vertical-center;

        left: 15px;
        z-index: 1;

        width: 15px;
        height: auto;
        opacity: .6;
      }

      &.error {
        input { border-color: $color_state-negative; }
      }

      &.labeled {
        padding: 3px 10px;

        background: $color_bg-light--accent;

        label {
          display: block;

        }
        .loading-spinner {
          float: none;

          margin: 10px 0;

          background: $color_bg-light;
        }
      }

      label, span {
        color: $color_font-medium;
        font-size: 11px;
        margin-bottom: 0.2em;
      }
    }

    input {
      &:not([type="checkbox"]):not([type="radio"]) { width: 100%; }
      &[type="radio"] {
        margin-right: 0.5em;
      }

      margin: 5px auto;
      padding: 8px 16px;
      padding-left: 40px;

      border-radius: 5px;
      border: 1px solid $color_brand-primary;
      outline: none;
      transition: border-color .2s;

      &:active, &:focus {
        border-color: $color_brand-primary--active;
        transition: border-color .2s;
      }

      &[type="checkbox"] { margin-left: 10px; }
    }

    .error-message {
      margin: 10px auto;
      color: $color_state-negative;
    }

    .form-footer {
      @extend ._clear;

      margin-top: 20px;
    }

    .loading-spinner { float: right; }

    button.submit {
      padding: 6px 16px;

      border: 1px solid $color_brand-primary;
      border-radius: 5px;
      transition: border-color .2s;

      &:hover {
        border-color: $color_brand-primary--active;
        transition: border-color .2s;
      }

      &.disabled {
        color: $color_font-medium;

        border-color: $color_bg-medium;
        cursor: default;

        opacity: .6;
      }
    }

    hr {
      height: 1px;

      background: $color_brand-primary;
      border: none;
    }

    a {
      display: inline-block;

      margin-left: 7px;

      color: $color_brand-primary--active;

      cursor: pointer;

      &:hover { color: $color_brand-primary; }
    }

    .auth-switch {
      margin-top: 15px;

      font-size: 14px;
      text-align: center;
      color: $color_font-medium;
    }
  }

  &.login-subpanel {
    .form-footer a {
      font-size: 12px;
      text-decoration: underline;
    }
  }

  &.account-subpanel {
    height: calc(100vh - 138px);
    .subpanel-content {
      padding-top: 100px;

      @include media('small') { padding-top: 70px; }
    }

    .logo-image {
      width: 35%;
      height: auto;
      margin-bottom: 30px;

      @include media('small') {
        width: 30%;
        margin-bottom: 25px;
      }
    }

    .user-info {
      margin-bottom: 30px;

      text-align: center;

      .user-image {
        width: 150px;
        height: 150px;
        margin: 0 auto;

        background: $color_bg-medium;
        border-radius: 50%;
      }

      h3 {
        margin-bottom: 0;
        font-size: 30px;

        .verified-mark {
          display: inline-block;
          top: 10px;

          margin-left: 10px;
        }
      }
    }

    .user-actions {
      display: flex;
      flex-wrap: wrap;

      width: 90%;
      margin: 0 auto;

      @include media('small') { width: 95%; }

      a {
        $cell_margin: 1px;

        display: block;
        box-sizing: border-box;
        flex: 1 1 33.33%;

        max-width: calc(33.33% - 2px);
        margin: $cell_margin;
        padding: 20px 10px;

        color: $color_font-light;
        text-align: center;
        font-size: 13px;

        background: $color_brand-primary;
        border-radius: 5px;
        transition: background .15s;

        &:hover {
          background: $color_brand-primary--active;
          transition: background .15s;
        }

        @include media('small') {
          flex: 1 1 50%;
          max-width: calc(50% - 2px);
        }

        .tile-badge {
          position: absolute;
          right: -6px;
          top: -9px;

          padding: 3px 7px;

          font-size: 10px;
          text-align: center;

          background: $color_state-negative;
          border-radius: 50%;
        }

        .icon-wrapper {
          $icon_size: 40px;

          width: $icon_size;
          height: $icon_size;
          margin: 10px auto;

          background: $color_bg-light;

          border-radius: 50%;

          img {
            @extend ._vertical-center;

            max-width: 50%;
            max-height: 50%;
            margin: 0 auto;
          }
        }
      }
    }

    .logout-button {
      position: absolute;
      bottom: 45px;
      right: 15px;

      color: $color_brand-primary--active;

      background: none;
      border: none;

      &:hover { color: $color_brand-primary; }
    }
  }
}

